Lead crud operations
