# config/routes.rb
@@ -21,6 +21,18 @@ Rails.application.routes.draw do
           delete '/:id', action: :destroy
         end
       end
+
+      # Define routes for the 'leads' resource under api/v1/leads
+      namespace :leads do
+        scope controller: 'leads' do
+          post '/', action: :create
+          get '/', action: :index
+          get '/:id', action: :show
+          patch '/:id', action: :update
+          put '/:id', action: :update
+          delete '/:id', action: :destroy
+        end
+      end
     end
   end
 end
